--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -31,28 +31,20 @@
     <h2>Assignment Submission Cover Page</h2>
 
     <div class="section">
-        <p><span class="label">Student Name:</span> Deonte</p>
+        <p><span class="label">Student Name:</span> Deonte Newland</p>
         <p><span class="label">Assignment:</span> Assignment 01 – Milestone 01</p>
     </div>
 
     <div class="section">
-        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">Type GitHub Repo URL here</a></p>
-        <p>Provide the URL to the GitHub Repository that hosts your assignment – provide a direct link to the subfolder that stores your deliverable (if not the root folder).</p>
-        <p><em>Format:</em> <code>https://github.com/&lt;account-name&gt;/&lt;repository-name&gt;</code></p>
-    </div>
+        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">https://icefang11.github.io/CUS1172_Deonte/</a><xx/p>
+         </div>
 
     <div class="section">
-        <p><span class="label">Deployment URL:</span> <a href="#" target="_blank">Type Deployment URL here</a></p>
-        <p>Provide the URL where your web application can be accessed and viewed in the browser.</p>
-        <p>This will be the GitHub Pages URL in the first assignment; or Netlify/Heroku in future projects.</p>
+        <p><span class="label">Deployment URL:</span> <a href="#" target="_blank">https://icefang11.github.io/CUS1172_Deonte/</a></p>
+        
     </div>
 
-    <div class="section">
-        <p><span class="label">Direct Links to Deliverables on GitHub (If applicable):</span></p>
-        <ul>
-            <li><a href="#" target="_blank">Type GitHub URLs to any additional deliverables</a></li>
-        </ul>
-    </div>
+   
 
     <div class="section declaration">
         <p><span class="label">Declaration of Own Work:</span></p>
@@ -60,5 +52,6 @@
     </div>
 </body>
 </html>
+
 
 
