--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -36,11 +36,13 @@
     </div>
 
     <div class="section">
-        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">https://icefang11.github.io/CUS1172_Deonte/</a><xx/p>
-         </div>
+        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">Type GitHub Repo URL here</a><xx/p>
+        <p>Provide the URL to the GitHub Repository that hosts your assignment – provide a direct link to the subfolder that stores your deliverable (if not the root folder).</p>
+        <p><em>Format:</em> <code>https://github.com/&lt;account-name&gt;/&lt;repository-name&gt;</code></p>
+    </div>
 
     <div class="section">
-        <p><span class="label">Deployment URL:</span> <a href="#" target="_blank">https://icefang11.github.io/CUS1172_Deonte/</a></p>
+        <p><span class="label">Deployment URL:</span> <a href="#" target="_blank">file:///C:/Users/deont/index.html</a></p>
         
     </div>
 
@@ -52,6 +54,7 @@
     </div>
 </body>
 </html>
+
 
 
 
