--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,8 +35,8 @@
     </div>
 
     <div class="section">
-        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">Type GitHub Repo URL here</a><xx/p>
-        <p>Provide the URL to the GitHub Repository that hosts your assignment – provide a direct link to the subfolder that stores your deliverable (if not the root folder).</p>
+        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">https://icefang11.github.io/CUS1172_Deonte/</a><xx/p>
+        
         <p><em>Format:</em> <code>https://github.com/&lt;account-name&gt;/&lt;repository-name&gt;</code></p>
     </div>
 
@@ -54,6 +53,7 @@
     </div>
 </body>
 </html>
+
 
 
 
