--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
     <div class="section">
         <p><span class="label">Student Name:</span> Deonte Newland</p>
         <p><span class="label">Assignment:</span> Assignment 01 – Milestone 01</p>
+        <p><span class="label">Major:</span> Information Technology</p>
+         <p><span class="label">Education summary:</span> Highschool Diploma</p>
+         <p><span class="label">Work Experience:</span> Home Health Aid</p>
+         <p><span class="label">Programing Skills:</span> Very little experiance with Java</p>
+         <p><span class="label">Gerneral Interests:</span> I like working with computer hardware</p>
+         <p><span class="label">Favorite Movies:</span> I haave two favorite movies Pacific Rim and How to train yor dragon</p>
+         <p><span class="label">My Projects in this course:</span> <link rel="stylesheet" href="https://stjohns.instructure.com/courses/93666/assignments/700735"></p>
+        
+    
     </div>
 
     <div class="section">
