--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -31,28 +31,29 @@
     <h2>Assignment Submission Cover Page</h2>
 
     <div class="section">
-        <p><span class="label">Student Name:</span> Deonte</p>
+        <p><span class="label">Student Name:</span> Deonte Newland</p>
         <p><span class="label">Assignment:</span> Assignment 01 – Milestone 01</p>
+        <p><span class="label">Major:</span> Information Technology</p>
+         <p><span class="label">Education summary:</span> Highschool Diploma</p>
+         <p><span class="label">Work Experience:</span> Home Health Aid</p>
+         <p><span class="label">Programing Skills:</span> Very little experiance with Java</p>
+         <p><span class="label">Gerneral Interests:</span> I like working with computer hardware</p>
+         <p><span class="label">Favorite Movies:</span> I haave two favorite movies Pacific Rim and How to train yor dragon</p>
+         <p><span class="label">My Projects in this course:</span> <link rel="stylesheet" href="https://stjohns.instructure.com/courses/93666/assignments/700735"></p>
+        
+    
     </div>
 
     <div class="section">
-        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">Type GitHub Repo URL here</a></p>
+        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">https://icefang11.github.io/CUS1172_Deonte/</a></p>
         <p>Provide the URL to the GitHub Repository that hosts your assignment – provide a direct link to the subfolder that stores your deliverable (if not the root folder).</p>
         <p><em>Format:</em> <code>https://github.com/&lt;account-name&gt;/&lt;repository-name&gt;</code></p>
     </div>
 
     <div class="section">
-        <p><span class="label">Deployment URL:</span> <a href="#" target="_blank">Type Deployment URL here</a></p>
-        <p>Provide the URL where your web application can be accessed and viewed in the browser.</p>
-        <p>This will be the GitHub Pages URL in the first assignment; or Netlify/Heroku in future projects.</p>
+        <p><span class="label">Deployment URL:</span> <a href="#" target="_blank">https://icefang11.github.io/CUS1172_Deonte/</a></p>
     </div>
 
-    <div class="section">
-        <p><span class="label">Direct Links to Deliverables on GitHub (If applicable):</span></p>
-        <ul>
-            <li><a href="#" target="_blank">Type GitHub URLs to any additional deliverables</a></li>
-        </ul>
-    </div>
 
     <div class="section declaration">
         <p><span class="label">Declaration of Own Work:</span></p>
@@ -60,6 +61,7 @@
     </div>
 </body>
 </html>
+
 
 
 
