--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -39,7 +39,9 @@
          <p><span class="label">Programing Skills:</span> Very little experiance with Java</p>
          <p><span class="label">Gerneral Interests:</span> I like working with computer hardware</p>
          <p><span class="label">Favorite Movies:</span> I haave two favorite movies Pacific Rim and How to train yor dragon</p>
-         <p><span class="label">My Projects in this course:</span> <link rel="stylesheet" href="https://stjohns.instructure.com/courses/93666/assignments/700735"></p>
+         <video src="https://www.youtube.com/watch?v=dLptjP1RKmQ"></video>
+         <video src="">https://www.youtube.com/watch?v=ZDyEERuK31Y</video>
+         <p><span class="label">My Projects in this course:</span> <a href="#" target="_blank">https://stjohns.instructure.com/courses/93666/assignments/700735</a></p>
         
     
     </div>
@@ -61,9 +63,4 @@
     </div>
 </body>
 </html>
-
-
-
-
-
 
