--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="section">
-        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">https://icefang11.github.io/CUS1172_Deonte/</a></p>
+        <p><span class="label">GitHub Repository:</span> <a href="#" target="_blank">https://github.com/IceFang11/CUS1172_Deonte/blob/main/milestone1/index.html</a></p>
         <p>Provide the URL to the GitHub Repository that hosts your assignment – provide a direct link to the subfolder that stores your deliverable (if not the root folder).</p>
         <p><em>Format:</em> <code>https://github.com/&lt;account-name&gt;/&lt;repository-name&gt;</code></p>
     </div>
@@ -63,5 +63,6 @@
     </div>
 </body>
 </html>
+
 
 
