--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignment Submission Cover Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            line-height: 1.6;
+        }
+        h1, h2 {
+            text-align: center;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .label {
+            font-weight: bold;
+        }
+        .declaration {
+            border-top: 2px solid #000;
+            padding-top: 15px;
+            margin-top: 20px;
+        }
+        iframe {
+            display: block;
+            margin: 15px auto;
+            width: 560px;
+            height: 315px;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <h1>CUS 1172 – Web Application Development</h1>
+    <h2>Assignment Submission Cover Page</h2>
 
+    <div class="section">
+        <p><span class="label">Student Name:</span> Deonte Newland</p>
+        <p><span class="label">Assignment:</span> Assignment 01 – Milestone 01</p>
+        <p><span class="label">Major:</span> Information Technology</p>
+        <p><span class="label">Education summary:</span> Highschool Diploma</p>
+        <p><span class="label">Work Experience:</span> Home Health Aid</p>
+        <p><span class="label">Programing Skills:</span> Very little experience with Java</p>
+        <p><span class="label">General Interests:</span> I like working with computer hardware</p>
+        <p><span class="label">Favorite Movies:</span> I have two favorite movies Pacific Rim and How to Train Your Dragon</p>
+        
+        <!-- YouTube embed instead of <video> -->
+        <iframe src="https://www.youtube.com/embed/dLptjP1RKmQ" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/ZDyEERuK31Y" allowfullscreen></iframe>
+        
+        <p><span class="label">My Projects in this course:</span> 
+           <a href="https://stjohns.instructure.com/courses/93666/assignments/700735" target="_blank">
+               https://stjohns.instructure.com/courses/93666/assignments/700735
+           </a>
+        </p>
+    </div>
+
+    <div class="section">
+        <p><span class="label">GitHub Repository:</span> 
+           <a href="https://github.com/IceFang11/CUS1172_Deonte/blob/main/milestone1/index.html" target="_blank">
+               https://github.com/IceFang11/CUS1172_Deonte/blob/main/milestone1/index.html
+           </a>
+        </p>
+        <p>Provide the URL to the GitHub Repository that hosts your assignment – provide a direct link to the subfolder that stores your deliverable (if not the root folder).</p>
+        <p><em>Format:</em> <code>https://github.com/&lt;account-name&gt;/&lt;repository-name&gt;</code></p>
+    </div>
+
+    <div class="section">
+        <p><span class="label">Deployment URL:</span> 
+           <a href="https://icefang11.github.io/CUS1172_Deonte/" target="_blank">
+               https://icefang11.github.io/CUS1172_Deonte/
+           </a>
+        </p>
+    </div>
+
+    <div class="section declaration">
+        <p><span class="label">Declaration of Own Work:</span></p>
+        <p>By submitting this cover page, I certify that all assignments/projects/reports/deliverables/code referenced herein is my own work, based on my personal study and/or research and that I have acknowledged all materials and sources used in its submission. I also certify that these assignments/projects/reports/deliverables/code have not previously been submitted for assessment at this course or elsewhere and that I have not copied in part or whole or otherwise plagiarized the work of other students and/or persons.</p>
+    </div>
+</body>
+</html>
